# ChibiChatBotGame

./: .gitignore  .gitmodules  Package.bat  Package.sh  README.md
.github/workflows/: main.yml
ChatBot/: chat_bot.py
ChatBot/TwitchChatBot/: chat_bot.py
ChatBot/WebSockServer/: web_sock_server.py
ChibiGame/: Cargo.toml
ChibiGame/src/: components.rs  listeners.rs  main.rs  states.rs
ChibiGame/src/components/: actions.rs  animation.rs  common.rs  gameplay.rs  movement.rs  player.rs  system.rs
ChibiGame/src/components/common/: events.rs  message.rs  sprite_index.rs  ui.rs
ChibiGame/src/components/gameplay/: actions_strategies.rs  ai.rs  gameplay_logic.rs  player.rs
ChibiGame/src/components/gameplay/actions_strategies/: climb_strategy.rs  walk_strategy.rs
ChibiGame/src/components/system/: config.rs  debug_info.rs
ChibiGame/src/listeners/: commands_listener.rs  event_listener.rs  web_sock_client.rs
ChibiGame/src/states/: animations_setup.rs  bot_connection.rs  chat_bot_connection.rs  config_state.rs  game_setup.rs  player_setup.rs
Docs/Wiki/: SetupGuide.md
Docs/Wiki/Localization/: README_UA.md
GameConfigurator/: GameConfigurator.pro  qml.qrc
GameConfigurator/Scripts/: add_credentials.py
GameConfigurator/Sources/: GameConfigurator.cpp
GameConfigurator/qml/: main_window.qml  pageLoader.mjs
GameConfigurator/qml/Base/: BasePanel.qml  BaseText.qml  ChibiBusyIndicator.qml  GlobalConfig.qml  Notification.qml  Style.qml  qmldir
GameConfigurator/qml/Pages/: qmldir  (+6 more)
TwitchBot/: Cargo.toml
TwitchBot/src/: components.rs  main.rs  parsers.rs  wss.rs
(+100 files in other folders)
