[package]
name = "ChibiGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3" # make sure this is the latest version
rand = "*"
rfd = "*"
bevy_rapier2d = { git = "https://github.com/devil-ira/bevy_rapier", branch = "bevy-0.11" }
crossbeam-channel = "*"
json = "*"
wasm-bindgen = "*"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.34"
async-std = "*"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window"
]

